experimental/report/testdata/single-line.yaml.simple.txt
<<<<<<< HEAD
remark: foo.proto:1:10: "proto4" isn't real, it can't hurt youremark: "proto4" isn't real, it can't hurt you
  --> foo.proto:1:10
   |
 1 | syntax = "proto4"
   |          ^^^^^^^^ help: change this to "proto5"

error: foo.proto:3:1: packageerror: package
  --> foo.proto:3:1
   |
 3 | package abc.xyz;
   | ^^^^^^^        - semicolon
   | |
   | package

error: foo.proto:3:1: this is an overlapping errorerror: this is an overlapping error
  --> foo.proto:3:1
   |
 3 | package abc.xyz;
   | ^^^^^^^--------- package decl
   | |
   | package

error: foo.proto:3:1: P A C K A G Eerror: P A C K A G E
  --> foo.proto:3:1
   |
 3 | package abc.xyz;
   | ^ -- -- help: ge
   | | |
   | help: p
   |   |
   |   help: ck

error: foo.proto:3:3: P A C K A G E (different order)error: P A C K A G E (different order)
  --> foo.proto:3:3
   |
 3 | package abc.xyz;
   | - ^^ -- help: ge
   | | |
   | | help: ck
   | |
   | help: p

error: foo.proto:3:1: P A C K A G E (single letters)error: P A C K A G E (single letters)
  --> foo.proto:3:1
   |
 3 | package abc.xyz;
   | ^ -- -- g
   | | |
   | p |
   |   |
   |   k

=======
remark: foo.proto:1:10: "proto4" isn't real, it can't hurt you
error: foo.proto:1:18: missing `;`
remark: foo.proto:7:2: EOF
error: foo.proto:3:1: package
error: foo.proto:3:1: this is an overlapping error
error: foo.proto:3:1: P A C K A G E
error: foo.proto:3:3: P A C K A G E (different order)
error: foo.proto:3:1: P A C K A G E (single letters)
>>>>>>> origin/main
